testing/valid_input/ok11.java
class Main {
    static int a = 0xFF.FFp-1;
    static void run() {

    }
}
