testing/invalid_lex/lex15.java
class Main {
    static int i.i.i = 5;
}
